--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
 								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
 							<p class="fancy" style="margin-top:-15px; margin-bottom:-15px;"><span><a class="button is-dark is-medium" 
-								onclick="alert('Not currently searching for new opportunities but feel free to connect with me on LinkedIn: https://www.linkedin.com/in/mirraonaq/')">My Résumé</a></span></p>						</div>
+								a href="https://www.linkedin.com/in/mirraonaq/" target="_blank">My Résumé</a></span></p>						
+							</div>
 					</div>
 				</article>
 			</div>
-
-
 
 		<!-- Portfolio -->
 			<div class="wrapper style3">
