--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<article class="container" id="top">
 					<div class="row">
 						<div class="4u 12u(mobile)">
-							<span class="image fit"><img src="profilepic.jpg" alt="" /></span>
+							<span class="image fit"><img src="profilepic.jpeg" alt="" /></span>
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
