--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<h1>Hi,<br><br> I'm <strong>Mir Raonaq</strong>.</h1>
 							</header>
 							<p class="fancy" style="margin-top:-15px; margin-bottom:-15px;"><span><a class="button is-dark is-medium" 
-								a href="https://www.linkedin.com/in/mirraonaq/" target="_blank">My Résumé</a></span></p>						
+								a href="https://www.linkedin.com/in/mirraonaq/" target="_blank">Let's Connect</a></span></p>						
 							</div>
 					</div>
 				</article>
