--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<article class="box style">
 									<a href="http://stark.cse.buffalo.edu/cse410/seventrain/uploads/index.html" target="_blank" class="image featured"></a>
 									<h3><a href="http://stark.cse.buffalo.edu/cse410/seventrain/uploads/index.html" target="_blank" >Learn to Code</a></h3>
-									<p>Website for students to learn coding</p>
+									<p>Website for students to learn coding through games</p>
 								</article>
 							</div>
 							<div class="4u 12u(mobile)">
@@ -130,12 +130,48 @@
 								</article>
 							</div>
 					</div>
+					<br>
+					<br>
+					<h2>Certifications</h2>
+					<br>
+					<div class="row center">
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://www.credly.com/badges/a9c308ea-b3cc-4083-adb8-4f3cbde5a9a2/public_url" target="_blank"class="image featured"><img src="azure-fundamentals.png" alt="azure-fundamentals" /></a>
+								<h4><a href="https://www.credly.com/badges/a9c308ea-b3cc-4083-adb8-4f3cbde5a9a2/public_url" target="_blank">Azure Fundamentals</a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://www.credly.com/badges/6f509574-8624-415b-9642-0ca7857e2a48/public_url" target="_blank"class="image featured"><img src="azure-developer.png" alt="azure-developer" /></a>
+								<h4><a href="https://www.credly.com/badges/6f509574-8624-415b-9642-0ca7857e2a48/public_url" target="_blank">Azure Developer</a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://www.credly.com/badges/0c2547bf-2b59-4f96-be0e-4b781fc29da6/public_url" target="_blank"class="image featured"><img src="CERT-Expert-DevOps-Engineer.png" alt="azure-devops" /></a>
+								<h4><a href="https://www.credly.com/badges/0c2547bf-2b59-4f96-be0e-4b781fc29da6/public_url" target="_blank">Azure DevOps</a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://www.credly.com/badges/2dbc4f03-38be-459a-8fea-6b13afe769e9/public_url" target="_blank"class="image featured"><img src="azure-administrator-associate.png" alt="azure-administrator" /></a>
+								<h4><a href="https://www.credly.com/badges/2dbc4f03-38be-459a-8fea-6b13afe769e9/public_url" target="_blank">Azure Administrator</a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://www.credly.com/badges/6c61193c-a2b2-4d58-b495-4f7553159a5c/public_url" target="_blank"class="image featured"><img src="azure-solutions-architect-expert.png" alt="azure-solutions-architect" /></a>
+								<h4><a href="https://www.credly.com/badges/6c61193c-a2b2-4d58-b495-4f7553159a5c/public_url" target="_blank">Azure Architect </a></h3>
+							</article>
+						</div>
+					</div>
 				</article>
 			</div>
 
 		<!-- Contact -->
 			<div class="wrapper style4">
-				<article id="contact" class="container 75%">
+				<article id="contact" class="container 50%">
 						<div class="row">
 							<div class="12u">
 								<h3>Connect with me</h3>
