--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 						<div class="row">
 							<div class="4u 12u(mobile)">
 								<article class="box style">
-									<a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="FoodBasket.png" alt="Food Basket" /></a>
-									<h3><a href="http://mirraonaq.com/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
+									<a href="https://www.mirraonaq.com/FoodBasket.github.io/" target="_blank"class="image featured"><img src="FoodBasket.png" alt="Food Basket" /></a>
+									<h3><a href="https://www.mirraonaq.com/FoodBasket.github.io/" target="_blank">Food Basket</a></h3>
 									<p>Share and claim free food and items!</p>
 								</article>
 							</div>
