--- a/index.html
+++ b/index.html
@@ -143,26 +143,38 @@
 						</div>
 						<div class="2u 12u(mobile)">
 							<article class="box style">
-								<a href="https://www.credly.com/badges/6f509574-8624-415b-9642-0ca7857e2a48/public_url" target="_blank"class="image featured"><img src="azure-developer.png" alt="azure-developer" /></a>
-								<h4><a href="https://www.credly.com/badges/6f509574-8624-415b-9642-0ca7857e2a48/public_url" target="_blank">Azure Developer</a></h3>
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/62B2D0D16D43F7D5?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="azure-developer.png" alt="azure-developer" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/62B2D0D16D43F7D5?sharingId=84AC31F13FD7C570" target="_blank">Azure Developer</a></h3>
 							</article>
 						</div>
 						<div class="2u 12u(mobile)">
 							<article class="box style">
-								<a href="https://www.credly.com/badges/0c2547bf-2b59-4f96-be0e-4b781fc29da6/public_url" target="_blank"class="image featured"><img src="CERT-Expert-DevOps-Engineer.png" alt="azure-devops" /></a>
-								<h4><a href="https://www.credly.com/badges/0c2547bf-2b59-4f96-be0e-4b781fc29da6/public_url" target="_blank">Azure DevOps</a></h3>
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/C3EE4A27C41048E8?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="CERT-Expert-DevOps-Engineer.png" alt="azure-devops" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/C3EE4A27C41048E8?sharingId=84AC31F13FD7C570" target="_blank">Azure DevOps</a></h3>
 							</article>
 						</div>
 						<div class="2u 12u(mobile)">
 							<article class="box style">
-								<a href="https://www.credly.com/badges/2dbc4f03-38be-459a-8fea-6b13afe769e9/public_url" target="_blank"class="image featured"><img src="azure-administrator-associate.png" alt="azure-administrator" /></a>
-								<h4><a href="https://www.credly.com/badges/2dbc4f03-38be-459a-8fea-6b13afe769e9/public_url" target="_blank">Azure Administrator</a></h3>
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/199C4831EDC2DF56?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="azure-administrator-associate.png" alt="azure-administrator" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/199C4831EDC2DF56?sharingId=84AC31F13FD7C570" target="_blank">Azure Administrator</a></h3>
 							</article>
 						</div>
 						<div class="2u 12u(mobile)">
 							<article class="box style">
-								<a href="https://www.credly.com/badges/6c61193c-a2b2-4d58-b495-4f7553159a5c/public_url" target="_blank"class="image featured"><img src="azure-solutions-architect-expert.png" alt="azure-solutions-architect" /></a>
-								<h4><a href="https://www.credly.com/badges/6c61193c-a2b2-4d58-b495-4f7553159a5c/public_url" target="_blank">Azure Architect </a></h3>
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/93DA2C90AE3B44E4?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="azure-solutions-architect-expert.png" alt="azure-solutions-architect" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/93DA2C90AE3B44E4?sharingId=84AC31F13FD7C570" target="_blank">Solutions Architect </a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/5FFA1A09D6A2D4C7?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="azure-security-engineer-associate.png" alt="azure-security-engineer" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/5FFA1A09D6A2D4C7?sharingId=84AC31F13FD7C570" target="_blank"> Security Engineer </a></h3>
+							</article>
+						</div>
+						<div class="2u 12u(mobile)">
+							<article class="box style">
+								<a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/5FFA1A09D6A2D4C7?sharingId=84AC31F13FD7C570" target="_blank"class="image featured"><img src="azure-ai.png" alt="azure-AI" /></a>
+								<h4><a href="https://learn.microsoft.com/api/credentials/share/en-us/MirRaonaq-0818/5FFA1A09D6A2D4C7?sharingId=84AC31F13FD7C570" target="_blank"> Azure AI </a></h3>
 							</article>
 						</div>
 					</div>
