Update portfolio: Add Prayer Time project and remove Algebra Master

--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
 									<p>Language learning tool</p>
 								</article>
 							</div>
-
 							<div class="4u 12u(mobile)">
 								<article class="box style">
-									<a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank" class="image featured"><img src="AlgebraMaster.png" alt="Algebra" /></a>
-									<h3><a href="https://github.com/MirRaonaq/AlgebraMaster"target="_blank">Algebra Master</a></h3>
-									<p>Learn basic algebra</p>
+									<a href="https://prayer.mirraonaq.com" target="_blank" class="image featured"><img src="logo-prayertime.png" alt="Prayer Time" /></a>
+									<h3><a href="https://prayer.mirraonaq.com" target="_blank">Prayer Time</a></h3>
+									<p>Islamic prayer times application</p>
 								</article>
 							</div>
 						</div>
